force-app/main/default/objects/JobApplicationContacts__c/JobApplicationContacts__c.object-meta.xml
<CustomObject>
    <description>This field will save multiple Job Application Contacts</description>
    <label>JobApplicationContacts</label>
    <nameField>
        <displayFormat>JAC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobApplicationContacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>