force-app/main/default/objects/JobApplicationContacts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Master Detail relationship to Contact(Master) from Job Application(Detail Side)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OtherContacts</relationshipLabel>
    <relationshipName>PrimaryContact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>