force-app/main/default/objects/JobApplicationContacts__c/fields/isPrimary__c.field-meta.xml
<CustomField>
    <fullName>isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that denotes contact is a primary contact on job application</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>