force-app/main/default/objects/JobApplicationContacts__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Field to store Title of the contact</description>
    <label>Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>